--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
          justify-content: center;
          align-items: center;
          height: 95vh;
-         font-size: 8vh;
+         font-size: 24px;
          font-family: Azeret Mono;
          line-height: 0em;
      }
      .sm {
-         font-size: 1em;
+         font-size: 24px;
      }
     </style>
 
